# antiword

./: .gitignore  CMakeLists.txt  README.md  antiword.h  antiword.h.in  chartrans.c  environment.yaml  local  options.c  word2text.c  wordtypes.h
.github/workflows/: build-conda-recipe.yaml
Resources/: ipaphon.txt
recipe/: build.sh  meta.yaml
